# turbodbc

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  Findcpp_odbc.cmake  MANIFEST.in  Makefile  README.md  appveyor.yml  codecov.yml  prepare_build.sh  setup.py  setup_env.sh
PyTest/: CMakeLists.txt  cursor_test_case.py  db_scripts_mysql.json  query_fixture.py  query_fixtures_exasol.json  query_fixtures_mysql.json  query_fixtures_postgresql.json  test_connect.py  test_connection.py  test_constructors.py  test_cursor_basics.py  test_cursor_insert.py  test_cursor_select.py  test_data_types.py  test_import.py  test_select.py  test_suite.py
Test/: CMakeLists.txt
Test/cpp_odbc_test/: level1_mock_api.h  level2_dummy_api.cpp  level2_dummy_api.h  level2_mock_api.h  mock_connection.h  mock_environment.h  mock_statement.h
Test/tests/: column_description_test.cpp  column_test.cpp  column_types_test.cpp  connection_test.cpp  credentials_test.cpp  cursor_test.cpp  description_test.cpp  description_types_test.cpp  dummy.cpp  environment_test.cpp  make_description_of_description_test.cpp  make_description_of_value_test.cpp  make_description_test.cpp  make_environment_test.cpp  mock_classes.cpp  mock_classes.h  parameter_test.cpp  query_test.cpp  raii_connection_test.cpp  raii_environment_test.cpp  raii_statement_test.cpp  result_set_test.cpp  statement_test.cpp
Test/tests/descriptions/: boolean_description_test.cpp  date_description_test.cpp  floating_point_description_test.cpp  integer_description_test.cpp  number_description_test.cpp  string_description_test.cpp  timestamp_description_test.cpp
Test/tests/level1/: api_test.cpp
Test/tests/level2/: api_test.cpp  handles_test.cpp  input_string_buffer_test.cpp  level1_connector_test.cpp  string_buffer_test.cpp
Test/tests/level3/: raii_connection_test.cpp  raii_environment_test.cpp  raii_statement_test.cpp
Wheel/: CMakeLists.txt  MANIFEST.template  build_wheel.sh  setup.template
appveyor/: odbc-data-sources.reg  odbc-mssql.reg  odbc-mysql.reg  odbc-postgresql.reg
cmake_scripts/: FindArrow.cmake  FindGTest.cmake  Findnumpy.cmake  Findodbc.cmake  default_build_setup.cmake
contrib/: copy-to-sdist.py
contrib/docker/: Dockerfile  build_and_test.sh  build_and_test_in_docker.sh  build_image.sh
cpp/: CMakeLists.txt
cpp/Test/: CMakeLists.txt
cpp/Test/tests/: column_test.cpp  connection_test.cpp  description_test.cpp  make_description_of_description_test.cpp  make_description_of_value_test.cpp  mock_classes.h  parameter_test.cpp  query_test.cpp
cpp/Test/tests/descriptions/: date_description_test.cpp  floating_point_description_test.cpp  integer_description_test.cpp  string_description_test.cpp  timestamp_description_test.cpp
cpp/cpp_odbc/: CMakeLists.txt
cpp/cpp_odbc/Test/: CMakeLists.txt
cpp/cpp_odbc/Test/cpp_odbc_test/: level1_mock_api.h  level2_mock_api.h  mock_connection.h  mock_statement.h
cpp/cpp_odbc/Test/tests/: column_description_test.cpp  connection_test.cpp  environment_test.cpp  multi_value_buffer_test.cpp  statement_test.cpp
cpp/cpp_odbc/Test/tests/level1/: api_test.cpp
cpp/cpp_odbc/Test/tests/level2/: api_test.cpp  handles_test.cpp  input_string_buffer_test.cpp  level1_connector_test.cpp  string_buffer_test.cpp
cpp/cpp_odbc/Test/tests/level3/: raii_connection_test.cpp  raii_environment_test.cpp  raii_statement_test.cpp
cpp/turbodbc/: CMakeLists.txt
cpp/turbodbc/Test/: CMakeLists.txt
cpp/turbodbc/Test/tests/: buffer_size_test.cpp  column_test.cpp  command_test.cpp  configuration_test.cpp  connection_test.cpp  description_test.cpp  field_translator_test.cpp  make_description_of_description_test.cpp  make_description_of_type_test.cpp  make_description_of_value_test.cpp  make_field_translator_test.cpp  mock_classes.cpp  mock_classes.h  parameter_test.cpp  query_test.cpp  result_set_test.cpp  string_helpers_test.cpp  time_helpers_test.cpp
cpp/turbodbc/Test/tests/descriptions/: boolean_description_test.cpp  date_description_test.cpp  floating_point_description_test.cpp  integer_description_test.cpp  string_description_test.cpp  timestamp_description_test.cpp  unicode_description_test.cpp
cpp/turbodbc/Test/tests/field_translators/: boolean_translator_test.cpp  date_translator_test.cpp  float64_translator_test.cpp  int64_translator_test.cpp  string_translator_test.cpp  timestamp_translator_test.cpp
cpp/turbodbc/Test/tests/parameter_sets/: bound_parameter_set_test.cpp  set_field_test.cpp
cpp/turbodbc/Test/tests/result_sets/: bound_result_set_test.cpp  double_buffered_result_set_test.cpp  field_result_set_test.cpp  result_set_test.cpp  row_based_result_set_test.cpp
cpp/turbodbc_arrow/: CMakeLists.txt
cpp/turbodbc_arrow/Test/: CMakeLists.txt
cpp/turbodbc_arrow/Test/tests/: arrow_result_set_test.cpp
cpp/turbodbc_numpy/: CMakeLists.txt
cpp/turbodbc_python/: CMakeLists.txt
cpp_odbc/: readme.md  setup_env.sh
docs/: CMakeLists.txt  Makefile  conf.py  index.rst  make.bat  requirements.txt
google_test/: CMakeLists.txt  build_google_test.bat  build_google_test.sh
performance_scripts/: measure_performance_exasol.py  measure_performance_postgresql.py
pydbc/: __init__.py  api_constants.py  connect.py  connection.py  cursor.py  data_types.py  exception_types.py  exceptions.py
python/: CMakeLists.txt
python/turbodbc_test/: CMakeLists.txt  cursor_test_case.py  for_each_database.py  helpers.py  query_fixture.py  query_fixtures_exasol.json  query_fixtures_mssql.json  query_fixtures_mysql.json  query_fixtures_postgresql.json  test_connect.py  test_connection.py  test_constructors.py  test_cursor_async_io.py  test_cursor_basics.py  test_cursor_insert.py  test_cursor_select.py  test_cursor_unsupported_features.py  test_data_types.py  test_executemanycolumns.py  test_executemanycolumns_corner_cases.py  test_has_arrow_support.py  test_has_numpy_support.py  test_multiple_connections.py  test_options.py  test_select_arrow.py  test_select_numpy.py  test_suite.py
travis/: install_arrow.sh  setup_test_dbs.sh  travis_before_install.sh
turbodbc/: connect.py  cursor.py
(+43 files in other folders)
